调整加密算法参数